--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,39 @@ body {
 
   object-fit: cover;
 }
+.compass{
+  position: absolute;
+  top: 0px; 
+  left: 5px;;
+  bottom: 90px;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
+}
+
+.group{
+  position: absolute;
+  top: 200px; 
+  left: 0;
+  bottom: 30px;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
+}
+
+.percent{
+  position: absolute;
+  top: 200px; 
+  left: 0;
+  bottom: 30px;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
+}
+
+.alarm{
+ 
+}
 
 /* Swiper Container */
 .swiper-container {
